# firmware

./: AGENTS.md  README.md  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: nrf9160dk_nrf9160.conf  nrf9160dk_nrf9160.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay
app/include/: button.h  channels.h  config.h  gnss.h  led.h  lte.h  mqtt_client.h  sensor.h  state.h  telemetry.h
app/src/: button.c  channels.c  config.c  gnss.c  led.c  lte.c  main.c  mqtt_client.c  sensor.c  shell.c  state.c  telemetry.c
certs/: hivemq-cellular-monitor-sec-tag-42.json
docs/: architecture.md  requirements.md  testing.md
tests/: CMakeLists.txt  prj.conf
tests/src/: main.c
